src/scss/component/header.scss
@import "~scss/_mixins";

.header { 
	position: fixed; top: 0px; right: 0px; width: 100%; z-index: 20; user-select: none; display: flex; flex-direction: row; align-items: center; 
	justify-content: stretch;
}

.header {
	.sides { height: 100%; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: stretch; }
	.side {	height: 100%; display: flex; align-items: center; flex-direction: row; }
	.side.left { padding: 0px 16px; width: 20%; flex-shrink: 0; gap: 0px 8px; }
	.side.center { width: 60%; flex-grow: 1; justify-content: center; }
	.side.right { padding: 0px 12px; width: 20%; flex-shrink: 0; justify-content: end; gap: 0px 8px; }

	.path { 
		width: 66%; display: inline-block; border-radius: 6px; height: 28px; line-height: 26px; transition: $transitionAllCommon;
		@include text-overflow-nw; padding: 0px 6px; -webkit-app-region: no-drag;
	}
	.path {
		.lock { @include text-small; color: var(--color-text-secondary); padding: 3px 6px 3px 20px; border-radius: 4px; background: var(--color-shape-tertiary) url('~img/icon/lock.svg') 6px 6px no-repeat;  }
	}

	.tabs { @include text-paragraph; display: inline-flex; flex-direction: row; align-items: center; height: 100%; -webkit-app-region: no-drag; }
	.tabs {
		.tab { 
			font-weight: 700; color: var(--color-control-active); transition: $transitionAllCommon; text-align: center;
			vertical-align: top; padding: 0px 16px; display: flex; align-items: center; height: 100%; border-bottom: 1px solid rgba(0,0,0,0);
		}
		.tab:hover { color: var(--color-text-primary); }
		.tab.active { color: var(--color-text-primary); border-color: var(--color-text-primary); }
	}

	.headerBanner {
		position: relative; display: flex; align-items: center; gap: 0px 16px; height: 32px; padding: 6px 10px; @include text-small; border-radius: 6px; background: var(--color-shape-tertiary);
		-webkit-app-region: no-drag; 
	}
	.headerBanner {
		.content { display: flex; gap: 0px 4px; align-items: center; }
		.content {
			.typeName { display: flex; gap: 0px 4px; flex-wrap: nowrap; }
			.typeName {
				.name { font-weight: 600; }
			}
		}
		.action { font-weight: 500; }
	}
	.headerBanner.withMenu { padding-right: 24px; }
	.headerBanner.withMenu:after { content: ''; position: absolute; right: 10px; top: 12px; width: 8px; height: 8px; background-image: url('~img/arrow/button/black.svg'); }
	.headerBanner.withMenu.active:after { transform: rotateZ(180deg); }

	.sync { -webkit-app-region: no-drag; flex-shrink: 0; }
	.icon { width: 28px; height: 28px; background-size: 20px; border-radius: 6px; -webkit-app-region: no-drag; flex-shrink: 0; }
	.icon:hover, .icon.hover { background-color: var(--color-shape-highlight-medium); }

	.icon.more { background-image: url('~img/icon/header/more.svg'); }
	.icon.settings { background-image: url('~img/icon/header/settings.svg'); }
	.icon.expand { display: none; background-image: url('~img/icon/header/expand.svg'); }
	.icon.relation { background-image: url('~img/icon/header/relation.svg'); }
}

.header.sidebarAnimation {
	.side.left { transition: padding-left $transitionSidebarTime linear; }
}

.header:not(.withSidebar) {
	.side.left { padding-left: 120px; }
}

body.isFullScreen {
	.header:not(.withSidebar) {
		.side.left { padding-left: 52px; }
	}
}

.header.authIndex { height: 52px; }

html:not(.bodyIndexIndex):not(.bodyAuthSelect) {
	.header.authIndex {
		.icon.settings { display: none; }
	}
}

.header.mainHistory { height: 52px; width: calc(100% - $historyPanelWidth); right: $historyPanelWidth; background: var(--color-bg-primary); }
.header.mainHistory {
	.side.center { overflow: hidden; }
	.side.center {
		.txt { @include text-overflow-nw; }
	}
}

.header.isCommon { background: var(--color-bg-primary); height: 52px; }
.header.isCommon {
	.path { border: 1px solid rgba(0,0,0,0); padding: 0px 10px; }
	.path {
		.inner { display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 0px 6px; }
		.name { @include text-overflow-nw; }
		.iconObject { flex-shrink: 0; }
	}
	.path:hover { border-color: var(--color-shape-secondary); }
}

.header.mainGraph {
	.side.right { gap: 0px 12px; }

	.filterWrap { width: 0px; overflow: hidden; transition: $transitionAllCommon; display: none; }
	.filterWrap {
		.filter { width: 100%; padding: 0px; }
		.inner { height: 28px; }
		.line { display: none; }
	}
	.filterWrap.active { width: 200px; }

	.icon.btn-search { background-image: url('~img/icon/header/search.svg'); }
	.icon.btn-filter { background-image: url('~img/icon/dataview/button/filter0.svg'); }
	.icon.btn-settings { background-image: url('~img/icon/dataview/button/settings.svg'); }
}

.header.mainStore.withBanner { flex-direction: column; height: auto !important; }
.header.mainStore.withBanner {
	.sides { display: flex; flex-direction: row; align-items: center; justify-content: stretch; height: 52px; }

	.bannerWrapper { width: 100%; padding: 16px 80px; }
	.bannerWrapper {
		.banner { 
			background-image: linear-gradient(180deg, #fef2c6 0%, #f8f8f8 100%); display: flex; align-items: center;
			color: var(--color-control-accent); height: 116px; border-radius: 11px; position: relative; justify-content: space-evenly;
			padding: 0px 116px; overflow: hidden;
		}
		.banner {
			.side { width: calc(50% - 46px); }
			.side.left { display: flex; flex-direction: column; padding: 0px; align-items: flex-start; justify-content: center; gap: 8px 0px; }
			.side.right { min-width: 424px; }

			.icon.close { position: absolute; width: 20px; height: 20px; background-image: url('~img/icon/header/banner/close.svg'); right: 10px; top: 10px; }
			.title { @include text-header3; @include text-overflow-nw; width: 100%; }
			.pic { 
				width: 100%; height: 100%; background: url('~img/icon/header/banner/pic.png') no-repeat; background-size: contain; 
				background-position: bottom right; 
			}
			.button { @include text-small; height: 24px; line-height: 24px; }
		}
	}
}

.popup {
	.header { position: sticky; padding: 0px; top: 0px !important; }
	.header {
		.side.left { padding-left: 14px !important; }
		.side.left {
			.icon.sidebar { display: none; }
			.icon.expand { display: inline-block; }
		}
	}
}

